# PySV-website

./: .gitignore  CODEOWNERS  LICENSE  Makefile  PySV-website.lektorproject  README.md  blog.py  environment.yml  main.py  pixi.toml  psv.lektorproject  pull_request_template.md  pyproject.toml  requirements.txt  requirements_deploy.txt
.github/workflows/: production.yml  staging.yml
_input/Jahresberichte/: Jahresbericht Python Verband 2022.docx  Jahresbericht Python Verband 2023.docx  Jahresbericht Python Verband 2024.docx  Jahresbericht Python Verband 2025.docx
artwork/: twitter_card.psd
assets/membership/: audit.html
assets/stylesheets/: main.css
avatar_creator/: README.md  create_avatar.py
content/: contents+en.lr  contents.lr
content/about/: contents.lr
content/board/: contents+en.lr  contents.lr
content/coc/: contents+en.lr  contents.lr
content/community/: contents+en.lr  contents.lr
content/documents/: contents+en.lr  contents.lr
databags/: board.json  board.yaml  links.json  links.yaml  membership.json  membership.yaml  social_media.json
docs/: deployment.md
models/: blog-post.ini  blog.ini  board.ini  coc.ini  community.ini  documents.ini  event.ini  events.ini  grants.ini  imprint.ini  membership.ini  page.ini  privacy.ini  python-post.ini  python.ini  reimbursements.ini  sustainability.ini
templates/: about.html  blog-post.html  blog.html  board.html  coc.html  community.html  event.html  events.html  layout.html  membership.html  page.html  python-post.html  python.html
website/: PySV-website.lektorproject
(+188 files in other folders)
